aks-openfaas/gateway-config/openfaas-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/common-name: faas.thu4n.dev
    cert-manager.io/issuer: letsencrypt-prod
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/common-name":"faas.thu4n.dev","cert-manager.io/issuer":"letsencrypt-prod","kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/add-headers":"Access-Control-Allow-Methods: GET, POST, PUT, DELETE, OPTIONS","nginx.ingress.kubernetes.io/cors-allow-origin":"*","nginx.ingress.kubernetes.io/enable-cors":"true"},"creationTimestamp":"2024-03-28T18:48:34Z","generation":1,"name":"openfaas-g [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,X-LANG,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin"
  creationTimestamp: "2024-03-28T18:48:34Z"
  generation: 1
  name: openfaas-gateway
  namespace: openfaas
  resourceVersion: "2009359"
  uid: 4bcf6e36-522f-46d8-b287-a72ac80a57f8
spec:
  rules:
  - host: faas.thu4n.dev
    http:
      paths:
      - backend:
          service:
            name: gateway
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - faas.thu4n.dev
    secretName: openfaas-gateway
status:
  loadBalancer:
    ingress:
    - ip: 4.156.90.176
